# cmake-concepts

./: README.md
02_specify_compilers/compilers_check/: CMakeLists.txt
05_subdirs/: CMakeLists.txt
06_system_dependent_code/01_system_display/: CMakeLists.txt
06_system_dependent_code/02_system_dependent_code/cpu_dependent/: CMakeLists.txt  arch-dependent.cpp
06_system_dependent_code/02_system_dependent_code/example/: CMakeLists.txt  hello-world.cpp
07_generating_header/: CMakeLists.txt  config.h.in  processor-info.cpp
08_compile_flags/cmake_compile_definations/: CMakeLists.txt
08_compile_flags/cmake_global_build_type/: CMakeLists.txt
08_compile_flags/cmake_language_flags/: CMakeLists.txt
08_compile_flags/target_compile_flags/: CMakeLists.txt
09_install/: CMakeLists.txt
10_projects/: CMakeLists.txt
projects/02_specify_compilers/CMakeLists_C++/: CMakeLists.txt
projects/04_libraries_linking/01_static_linking/: CMakeLists.txt
projects/04_libraries_linking/02_static_lib_include/: CMakeLists.txt
projects/04_libraries_linking/03_shared_linking/: CMakeLists.txt
projects/04_libraries_linking/04_objectFile_for_linking/: CMakeLists.txt
projects/project_compilers/CMakeLists_C/: CMakeLists.txt
projects/project_compilers/CMakeLists_default/: CMakeLists.txt
projects/project_compilers/CMakeLists_fortran/: CMakeLists.txt
projects/project_execfile/: CMakeLists.txt
projects/project_include/target_include/: CMakeLists.txt
